@@ -328,8 +328,7 @@ endif
 
 XFAIL_TESTS = \
 	TestSerialVersions.java \
-	TestSerialPersistent.java \
-	DateFormatTest.java 
+	TestSerialPersistent.java 
 
 EXTRA_DIST = $(ALWAYS_TESTS) \
 	$(TEST_Overflow) \
