@@ -1,3 +1,13 @@
+2007-12-25  Dalibor Topic  <robilad@kaffe.org>
+
+	Fix for #120.
+	
+	* test/regression/Makefile.am (XFAIL_TESTS): Removed DateFormatTest.java again,
+	as it was my operating system installation that didn't have a time zone set that
+	caused the test to fail. Yay me.
+
+	Reported by:  Ito Kazumitsu  <kaz@maczuka.gcd.org>
+
 2007-12-24  Ito Kazumitsu  <kaz@maczuka.gcd.org>
 
 	* kaffe/man/kaffe.1.in: Updated according to kaffe.1.xml.
